# cipher-dogs-bot

./: .gitignore  .scalafmt.conf  Cargo.toml  Makefile  README.md  bot.py  bot.service  build.sbt  install.sh  price.py  requirements.txt  run.sh
project/: Dependencies.scala  plugins.sbt
src/: library.py  main.py  main.rs  price.py
src/main/scala/cipherdogs/: CipherBot.scala  Main.scala
